--- a/stylesheet.css
+++ b/stylesheet.css
@@ -379,6 +379,7 @@ i {
         margin: 0 auto;
     }
     .soft-logo {
-        width: 30px;
+        width: 50px;
+        padding: 10px;
     }
 }
