--- a/stylesheet.css
+++ b/stylesheet.css
@@ -344,7 +344,7 @@ i {
         background-position: top left;
     }
     .profile-img {
-        width: 60%;
+        max-width: 60%;
     }
     .info {
         width: 90%;
